# ordinal-classification-loss

./: Makefile  README.md  pyproject.toml
ordinal_classification_loss/: loss.py  model.py
tests/: test_loss.py  test_model.py
