[tool.poetry]
name = "ordinal-classification-loss"
version = "0.1.0"
description = ""
authors = ["Alexandre Candeias <candeiasalexandre@gmail.com>"]
readme = "README.md"
packages = [{include = "ordinal_classification_loss"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
